Correct vertical spacing in file
Also includes correction of h4 style.

--- a/app/assets/stylesheets/article.scss
+++ b/app/assets/stylesheets/article.scss
@@ -15,6 +15,7 @@
       padding-bottom: 13px;
     }
   }
+
   h2 {
     @include bold-36;
     padding-top: 8px;
@@ -25,8 +26,9 @@
       padding-bottom: 9px;
     }
   }
+
   h3 {
-    @include heading-24;
+    @include bold-24;
     padding-top: 8px;
     padding-bottom: 7px;
 
@@ -35,9 +37,11 @@
       padding-bottom: 6px;
     }
   }
+
   h4 {
     @include bold-19;
   }
+
   header {
     margin: 0;
     padding: 1em 14px 0;
